--- a/dev/pom.xml
+++ b/dev/pom.xml
@@ -12,4 +12,12 @@
   <groupId>dev</groupId>
   <artifactId>dev</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+  </dependencies>
+
 </project>
