--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
   <properties>
     <slf4j.version>1.7.5</slf4j.version>
+    <spring.version>3.2.2.RELEASE</spring.version>
   </properties>
 
 
