--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <jdk.version>1.7</jdk.version>
     <slf4j.version>1.7.5</slf4j.version>
     <spring.version>3.2.2.RELEASE</spring.version>
+    <resteasy.version>2.3.6.Final</resteasy.version>
   </properties>
 
 
