--- a/web/pom.xml
+++ b/web/pom.xml
@@ -41,6 +41,12 @@
       <version>${resteasy.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+
   </dependencies>
 
 
