--- a/dev/pom.xml
+++ b/dev/pom.xml
@@ -17,6 +17,12 @@
       <artifactId>core</artifactId>
       <version>${project.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.4</version>
+    </dependency>
   </dependencies>
 
 </project>
