renaming animation sprite sheet

--- a/dev/src/main/resources/export.properties
+++ b/dev/src/main/resources/export.properties
@@ -1,4 +1,4 @@
 bitmap.path=C:\\sa\\export\\bitmap
 bitmap.format=png
-sprite.path=C:\\sa\\export\\sprite
-sprite.format=png
+animation.path=C:\\sa\\export\\animation
+animation.format=png
