implementing map gallery

--- a/dev/src/main/resources/export.properties
+++ b/dev/src/main/resources/export.properties
@@ -2,3 +2,4 @@ bitmap.path=C:\\sa\\export\\bitmap
 bitmap.format=png
 animation.path=C:\\sa\\export\\animation
 animation.format=png
+map.path=C:\\sa\\export\\animation
