--- a/dev/src/main/resources/export.properties
+++ b/dev/src/main/resources/export.properties
@@ -2,4 +2,6 @@ bitmap.path=C:\\sa\\export\\bitmap
 bitmap.format=png
 animation.path=C:\\sa\\export\\animation
 animation.format=png
+thumbnail.path=C:\\sa\\export\\thumbnail
+thumbnail.format=png
 map.path=C:\\sa\\export\\map
