--- a/dev/src/main/resources/export.properties
+++ b/dev/src/main/resources/export.properties
@@ -1,5 +1,5 @@
-bitmap.path=C:\\sa\\export\\bitmap
+bitmap.path=D:\\grucis\\export\\bitmap
 bitmap.format=png
-animation.path=C:\\sa\\export\\animation
+animation.path=D:\\grucis\\export\\animation
 animation.format=png
-map.path=C:\\sa\\export\\map
+map.path=D:\\grucis\\export\\map
